v1.1.0/modules/schema/pages/class/SusceptancePerLength.adoc
= `SusceptancePerLength`
:toclevels: 4


+++Imaginary part of admittance per unit of length.+++


[cols="h,3",width=60%]
|===
| Type
| CIM data type class


| URI
| `cim:SusceptancePerLength`


| CIM standard (perspective)
| IEC61970 (Grid)


|===

== Slots

[cols="1,1,2",width=100%]
|===
| Name | Type | Description

| `value`
| 0..1 +
https://w3id.org/linkml/Float[`float`]
//| +++None+++
| n/a

| `multiplier`
| 0..1 +
xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
//| +++None+++
| n/a

| `unit`
| 0..1 +
xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
//| +++None+++
| n/a
|===

////

'''


//[discrete]
[#multiplier]
=== `multiplier`


[cols="h,1",width=60%]
|===
| URI
| `cim:SusceptancePerLength.multiplier`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitMultiplier.adoc[`UnitMultiplier`]
|===

//[discrete]
[#unit]
=== `unit`


[cols="h,1",width=60%]
|===
| URI
| `cim:SusceptancePerLength.unit`
| Cardinality
| 0..1
| Type
| xref::enumeration/UnitSymbol.adoc[`UnitSymbol`]
|===

//[discrete]
[#value]
=== `value`


[cols="h,1",width=60%]
|===
| URI
| `cim:SusceptancePerLength.value`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]
|===

////

== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/PerLengthSequenceImpedance.adoc[`PerLengthSequenceImpedance`] | xref::class/PerLengthSequenceImpedance.adoc#bch[`bch`]



| xref::class/PhaseImpedanceData.adoc[`PhaseImpedanceData`] | xref::class/PhaseImpedanceData.adoc#b[`b`]


|===

